--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
@@ -170,7 +170,16 @@
 
 
                     </div>
+                    <div class="col-md-4 pr-1">
 
+                        <div class="form-group">
+                            <label>Serie Producto</label>
+                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="InputLlamada.SerieFabricante" readonly>
+
+                        </div>
+
+
+                    </div>
                     <div class="col-md-4 pr-1">
 
                         <div class="form-group">
