--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
@@ -1815,7 +1815,7 @@
                         <div class="form-group">
                             <label>Tipo de Caso:</label>
                             <select id="tipoCaso" class="form-control" required asp-for="Llamada.TipoCaso">
-                                <option value="0">Seleccione</option>
+                             @*    <option value="0">Seleccione</option> *@
 
 
                                 @foreach (var item in Model.TP)
