--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -861,6 +861,10 @@
                     Adjuntos: bases64
                 }
 
+                if (recibido.StatusLlamada == "48" && documentosbase64.length == 0)
+                {
+                    throw new Error("Llamada en status POR PROCESAR, debe llevar adjuntos");
+                }
                 console.log(JSON.stringify(recibido));
 
                 Swal.fire({
@@ -1716,9 +1720,6 @@
 
 
                         </div>
-                        <div class="col-md-8 pl-1">
-
-                        </div>
                         <div class="col-md-4 pr-1">
 
                             <div class="form-group">
@@ -1729,22 +1730,17 @@
 
 
                         </div>
-
-                        <div class="col-md-4 pr-1">
+                        <div class="col-md-4 pl-1">
 
                             <div class="form-group">
-                                <label>Ubicación Producto</label>
-                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="UbicacionProd" readonly> 
+                                <label>Serie</label>
+                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="InputLlamada.SerieFabricante" readonly> 
                             </div>
 
 
                         </div>
 
-
-
-                        
-                       
-                        <div class="col-md-4 pl-1">
+                        <div class="col-md-6 pr-1">
 
                             <div class="form-group">
                                 <label>Cliente</label>
@@ -1754,6 +1750,23 @@
 
 
                         </div>
+
+                        <div class="col-md-6 pl-1">
+
+                            <div class="form-group">
+                                <label>Asunto de la Llamada</label>
+                                <input class="form-control" asp-for="InputLlamada.Asunto" readonly />
+
+                            </div>
+
+
+                        </div>
+
+
+
+                        
+                       
+                    
                         <div class="col-md-3 pr-1">
 
                             <div class="form-group">
@@ -1777,17 +1790,16 @@
 
 
                         </div>
-
                         <div class="col-md-3 pr-1">
 
                             <div class="form-group">
-                                <label>Asunto de la Llamada</label>
-                                <input class="form-control" asp-for="InputLlamada.Asunto" readonly />
-
+                                <label>Ubicación Producto</label>
+                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="UbicacionProd" readonly>
                             </div>
 
 
                         </div>
+                        
 
                         <div class="col-md-3 pr-1">
 
@@ -1805,7 +1817,7 @@
 
 
                         </div>
-                        <div class="col-md-3 pr-1">
+                        <div class="col-md-3 pl-1">
 
                             <div class="form-group">
                                 <label>Fecha SISO</label>
