--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -275,16 +275,15 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered first">
                         <thead>
-                            <tr>
-                                <th>ID</th>
+                            <tr> 
                                 <th>ID Llamada</th>
-                                <th>Tecnico</th>
-                                <th>Fecha Creación</th>
+                                <th>Tecnico</th> 
                                 <th>Fecha SISO</th>
                                 <th>Producto</th>
                                 <th>Status</th>
 
                                 <th>Estado Llamada</th>
+                                <th>Tipo Caso</th>
                                 <th>Acción</th>
 
                             </tr>
@@ -292,15 +291,14 @@
                         <tbody>
                             @foreach (var item in Model.Objeto)
                             {
-                                <tr>
-                                    <td>@item.id</td>
+                                <tr> 
                                     <td>@item.idLlamada</td>
                                     @{
                                         var id = item.idTecnico.ToString();
                                     }
                                     <td>@(Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault() == null ? "" : Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre)</td>
 
-                                    <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
+                                
                                     <td> @item.FechaSISO.ToString("dd/MM/yyyy")</td>
 
                                   
@@ -339,6 +337,20 @@
                                         }
                                         @(Model.Status.Where(a => a.idSAP == LLamada).FirstOrDefault() == null ? "" : Model.Status.Where(a => a.idSAP == LLamada).FirstOrDefault().Nombre)
                                     </td>
+
+                                    <td>
+
+                                        @{
+                                            string LLamadaTP = item.TipoCaso.ToString();
+
+
+                                        }
+                                        @(Model.TP.Where(a => a.idSAP == LLamadaTP).FirstOrDefault() == null ? "" : Model.TP.Where(a => a.idSAP == LLamadaTP).FirstOrDefault().Nombre)
+
+
+
+                                    </td>
+
                                     <td>
                                         @if (item.Status == 0)
                                         {
@@ -359,16 +371,15 @@
 
                         </tbody>
                         <tfoot>
-                            <tr>
-                                <th>ID</th>
+                            <tr> 
                                 <th>ID Llamada</th>
-                                <th>Tecnico</th>
-                                <th>Fecha Creación</th>
+                                <th>Tecnico</th> 
                                 <th>Fecha SISO</th>
 
                                 <th>Producto</th>
                                 <th>Status</th>
                                 <th>Estado Llamada</th>
+                                <th>Tipo Caso</th>
 
                                 <th>Acción</th>
 
