--- a/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
@@ -245,7 +245,7 @@
     <script src="https://cdn.datatables.net/rowgroup/1.0.4/js/dataTables.rowGroup.min.js"></script>
     <script src="https://cdn.datatables.net/select/1.2.7/js/dataTables.select.min.js"></script>
     <script src="https://cdn.datatables.net/fixedheader/3.1.5/js/dataTables.fixedHeader.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.3/pako.min.js"></script>
 
 
 
