--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -860,7 +860,7 @@
                     DetReparacion: Cadena,
                     Adjuntos: bases64
                 }
-
+                var cantidadAdjuntos = parseFloat("@Model.Encabezado.Adjuntos.Count()");
                 if (recibido.StatusLlamada == "48" && documentosbase64.length == 0)
                 {
                     throw new Error("Llamada en status POR PROCESAR, debe llevar adjuntos");
