--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
@@ -751,14 +751,22 @@
                                         },
                                     }).then((result) => {
                                         if (result.isConfirmed) {
+                                             
                                             var recibidos = JSON.stringify(recibido);
+                                            var jsonString = JSON.stringify(recibido);
+                                            // Comprimir la cadena JSON utilizando gzip
+                                            var compressedData = pako.gzip(jsonString);
 
+                                            // Convertir los datos comprimidos a un ArrayBuffer (opcional, depende de tu caso de uso)
+                                            var compressedArrayBuffer = compressedData.buffer;
                                             $.ajax({
                                                 type: 'POST',
 
                                                 url: '@Url.Page("Editar", "Generar")',
                                                 dataType: 'json',
-                                                data: { recibidos: recibidos.toString() },
+                                                contentType: 'application/json',
+                                                data: compressedArrayBuffer,
+                                                processData: false,
                                                 headers: {
                                                     RequestVerificationToken: $('input:hidden[name="__RequestVerificationToken"]').val()
                                                 },
