--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Observar.cshtml
@@ -620,11 +620,21 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-3">
                         <div class="form-group">
                             <label>Horas:</label>
                             <input type="number" min="0" step="1" class="form-control" asp-for="Input.Horas" id="horas" required readonly disabled />
                         </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input asp-for="Input.SinRepuestos" class="form-check-input" type="checkbox" id="sinRepuestos" readonly disabled>
+                                <span class="form-check-sign"></span>
+                                Sin Repuestos
+                            </label>
+                        </div>
+
                     </div>
 
                 </div>
