--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -692,6 +692,7 @@
                     EmailPersonaContacto: $("#emailPersonaContacto").val(),
                     NumeroPersonaContacto: $("#telefonoPersonaContacto").val(),
                     PIN: $("#idPIN").val().length > 0 ? true : false,
+                    Prioridad: $("#prioridad").val(),
                     Adjuntos: bases64,
                     AdjuntosIdentificacion: bases64I
                 }
@@ -1307,13 +1308,26 @@
                                 <label class="form-check-label">
                                     <input asp-for="Input.SinRepuestos" class="form-check-input" type="checkbox" id="sinRepuestos" readonly disabled>
                                     <span class="form-check-sign"></span>
-                                    Sin Repuestos
+                                    Sin Accesorios
                                 </label>
                             </div>
 
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-6">
 
+                            <div class="form-group">
+                                <label>Prioridad:</label>
+                                <select id="prioridad" class="form-control" asp-for="Input.Prioridad" required>
+                                    <option value="L">Baja</option> 
+                                    <option value="H">Alta</option>
+
+
+                                </select>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
