--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
@@ -667,6 +667,7 @@
                     EmailPersonaContacto: $("#emailPersonaContacto").val(),
                     NumeroPersonaContacto: $("#telefonoPersonaContacto").val(),
                     SinRepuestos: $('#sinRepuestos').prop('checked'),
+                    Prioridad: $("#prioridad").val(),
                     Adjuntos: bases64,
                     AdjuntosIdentificacion: bases64I
                 }
@@ -1690,7 +1691,7 @@
                             <label class="form-check-label">
                                 <input asp-for="Input.SinRepuestos" class="form-check-input" type="checkbox" id="sinRepuestos">
                                 <span class="form-check-sign"></span>
-                                Sin Repuestos
+                                Sin Accesorios
                             </label>
                         </div>
                          
@@ -1698,7 +1699,20 @@
 
 
                 </div>
+                <div class="row">
+                    <div class="col-sm-6">
 
+                        <div class="form-group">
+                            <label>Prioridad:</label>
+                            <select id="prioridad" class="form-control" asp-for="Input.Prioridad" required>
+                                <option value="L">Baja</option> 
+                                <option value="H">Alta</option>
+
+                                
+                            </select>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
