--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Observar.cshtml
@@ -631,12 +631,27 @@
                             <label class="form-check-label">
                                 <input asp-for="Input.SinRepuestos" class="form-check-input" type="checkbox" id="sinRepuestos" readonly disabled>
                                 <span class="form-check-sign"></span>
-                                Sin Repuestos
+                                Sin Accesorios
                             </label>
                         </div>
 
                     </div>
 
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+
+                        <div class="form-group">
+                            <label>Prioridad:</label>
+                            <select id="prioridad" class="form-control" asp-for="Input.Prioridad" disabled >
+                                <option value="L">Baja</option>
+                                <option value="M">Media</option>
+                                <option value="H">Alta</option>
+
+
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
 
