--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -718,13 +718,21 @@
                     }).then((result) => {
                         if (result.isConfirmed) {
                             var recibidos = recibido1;
+                             var jsonString = JSON.stringify(recibido1);
+                            // Comprimir la cadena JSON utilizando gzip
+                            var compressedData = pako.gzip(jsonString);
+
+                            // Convertir los datos comprimidos a un ArrayBuffer (opcional, depende de tu caso de uso)
+                            var compressedArrayBuffer = compressedData.buffer;
 
                             $.ajax({
                                 type: 'POST',
 
                                 url: '@Url.Page("Editar", "Generar")',
                                 dataType: 'json',
-                                data: { recibido: recibidos },
+                                contentType: 'application/json',
+                                data: compressedArrayBuffer,
+                                processData: false,
                                 headers: {
                                     RequestVerificationToken: $('input:hidden[name="__RequestVerificationToken"]').val()
                                 },
