--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -914,7 +914,7 @@
                                 if (json.success == true) {
                                     Swal.fire({
                                         title: "Ha sido generado con éxito",
-
+                                        text:  json.mensaje
                                         icon: 'success',
                                         showCancelButton: false,
 
