--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -1380,12 +1380,26 @@
 
                             <div class="form-group">
                                 <label>Prioridad:</label>
-                                <select id="prioridad" class="form-control" asp-for="Input.Prioridad" required>
-                                    <option value="L">Baja</option> 
-                                    <option value="H">Alta</option>
+                                @if (!string.IsNullOrEmpty(Roles.Where(a => a == "70").FirstOrDefault()))
+                                {
+                                    <select id="prioridad" class="form-control" asp-for="Input.Prioridad" required>
+                                        <option value="L">Baja</option>
+                                        <option value="H">Alta</option>
 
 
-                                </select>
+                                    </select>
+                                }
+                                else
+                                {
+                                    <select id="prioridad" class="form-control" asp-for="Input.Prioridad" required disabled>
+                                        <option value="L">Baja</option>
+                                        <option value="H">Alta</option>
+
+
+
+                                    </select>
+                                }
+                                
                             </div>
                         </div>
                     </div>
